--- a/hatom.css
+++ b/hatom.css
@@ -53,7 +53,7 @@ p1 {
 .container{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    padding: 20px;
+    column-gap: 20px;
 }
 .portfolio{
     height: 200px;
