--- a/hatom.css
+++ b/hatom.css
@@ -74,6 +74,30 @@ p1 {
     transition: 0.6s;
     box-shadow: none;
 }
+.container2{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 20px;
+}
+.portfolio2{
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    filter: brightness(50%);
+    box-shadow: inset 0px 0px 20px 0px black;
+}
+
+.portfolio2:hover{
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    filter: brightness(100%);
+    
+    transition: 0.6s;
+    box-shadow: none;
+}
 
 .hatom-name {
     background-image: url(HatomText.png);
