--- a/hatom.css
+++ b/hatom.css
@@ -64,6 +64,7 @@ p1 {
     filter: brightness(50%);
     box-shadow: inset 0px 0px 20px 0px black;
     border: 4px solid #5F3CAD;
+    transition: 0.6s;
 }
 
 .portfolio:hover{
@@ -71,8 +72,7 @@ p1 {
     background-size: cover;
     background-position: center;
     border-radius: 10px;
-    filter: brightness(100%);
-    
+    filter: brightness(100%);    
     transition: 0.6s;
     box-shadow: none;
 }
@@ -89,6 +89,7 @@ p1 {
     filter: brightness(50%);
     box-shadow: inset 0px 0px 20px 0px black;
     border: 4px solid #5F3CAD;
+    transition: 0.6s;
 }
 
 .portfolio2:hover{
@@ -97,7 +98,6 @@ p1 {
     background-position: center;
     border-radius: 10px;
     filter: brightness(100%);
-    
     transition: 0.6s;
     box-shadow: none;
 }
