--- a/hatom.css
+++ b/hatom.css
@@ -158,6 +158,22 @@ p1 {
     background-color: transparent;
     background-position-y: -529px;
 }
+p2 {
+    font-family: 'Montserrat', sans-serif;
+    position: relative;
+    font-size: 50px;
+    left: 80%;
+    color: white;
+    text-decoration: underline;
+}
+
+h2 {
+    position: absolute;
+    color: white;
+    left: 75%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 35px;
+}
 
 @keyframes hatom {
     from {filter: opacity(0%)};
