--- a/hatom.css
+++ b/hatom.css
@@ -183,10 +183,11 @@ h3 {
     color: white;
     position: absolute;
     background-color: transparent;
-    left: 45%;
-    font-size: 35px;
+    left: 40%;
+    transform: translateY(-15px);
+    text-shadow: 0px 2px 3px black;
+    font-size: 25px;
     font-variant: all-small-caps;
-    top: 212%;
 }
 
 @keyframes hatom {
