--- a/hatom.css
+++ b/hatom.css
@@ -185,7 +185,7 @@ h3 {
 }
 
 @keyframes hatomshake {
-    from {transform: scale(1.1);}
-    to {transform: scale(1);}
+    from {transform: scale(1.1)};
+    to {transform: scale(1)};
     
 }
