--- a/hatom.css
+++ b/hatom.css
@@ -131,6 +131,7 @@ p1 {
     transform: scaleX(-900px);
     transition: 8s;
     filter: none;
+}
 .third {
     display: grid;
     grid-template-columns: 1.1fr 1.1fr 1.1fr;
@@ -145,7 +146,7 @@ p1 {
     border-radius: 10px;
     border-bottom: 5px solid #5F3CAD;
 }
-p2 {
+.p2 {
     font-family: 'Montserrat', sans-serif;
     position: relative;
     font-size: 50px;
