--- a/hatom.css
+++ b/hatom.css
@@ -142,7 +142,7 @@ p1 {
     border-radius: 10px;
     border-bottom: 5px solid #5F3CAD;
 }
-.p2 {
+p2 {
     font-family: 'Montserrat', sans-serif;
     position: relative;
     font-size: 50px;
