--- a/hatom.css
+++ b/hatom.css
@@ -120,17 +120,22 @@ p1 {
 }
 .car {
     background-size: cover;
-    border-radius: 5px;
-    filter: drop-shadow(0px 5px 706px #5F3CAD);
+    background-position: center;
+    filter: drop-shadow(2px 6px 718px #5F3CAD);
     background-color: transparent;
+    background-position-y: -44px;
+    border-radius: 10px;
+    border-bottom: 5px solid #5F3CAD;
 }
-.car-back:hover {
+.car2 {
+    background-image: url(jkkljn.png);
     background-size: cover;
-    border-radius: 5px;
-    background-position: right;
-    transform: scaleX(-900px);
-    transition: 8s;
-    filter: none;
+    background-position: center;
+    filter: drop-shadow(2px 6px 718px #5F3CAD);
+    background-color: transparent;
+    background-position-y: -44px;
+    border-radius: 10px;
+    border-bottom: 5px solid #5F3CAD;
 }
 
 .intro {
