--- a/hatom.css
+++ b/hatom.css
@@ -152,6 +152,17 @@ p2 {
     text-decoration: underline;
     text-shadow: 0px 5px 4px black;
 }
+h1 {
+    font-family: 'Montserrat', sans-serif;
+    color: white;
+    position: absolute;
+    background-color: transparent;
+    left: 45%;
+    transform: translateY(-15px);
+    text-shadow: 0px 2px 3px black;
+    font-size: 25px;
+    font-variant: all-small-caps;
+}
 
 h2 {
     position: absolute;
@@ -176,7 +187,7 @@ h4 {
     color: white;
     position: absolute;
     background-color: transparent;
-    left: 45%;
+    left: 40%;
     transform: translateY(-15px);
     text-shadow: 0px 2px 3px black;
     font-size: 25px;
