--- a/hatom.css
+++ b/hatom.css
@@ -46,7 +46,7 @@ p1 {
     background-color: #f5f5dc00;
     animation: hatomnew;
     animation-duration: 3s;
-    filter: drop-shadow(0px 5px 52px #5F3CAD);
+    filter: drop-shadow(0px 5px 52px #067469);
 }
 
 
