--- a/hatom.css
+++ b/hatom.css
@@ -62,9 +62,8 @@ p1 {
     background-size: cover;
     background-position: center;
     border-radius: 10px;
-    filter: brightness(50%);
     box-shadow: inset 0px 0px 20px 0px black;
-    border: 4px solid #5F3CAD;
+    border: 4px solid #04f6dd;
     transition: 0.6s;
 }
 
@@ -87,9 +86,8 @@ p1 {
     background-size: cover;
     background-position: center;
     border-radius: 10px;
-    filter: brightness(50%);
     box-shadow: inset 0px 0px 20px 0px black;
-    border: 4px solid #5F3CAD;
+    border: 4px solid #04f6dd;
     transition: 0.6s;
 }
 
@@ -132,7 +130,7 @@ p1 {
     background-color: transparent;
     background-position-y: -291px;
     border-radius: 10px;
-    border-bottom: 5px solid #5F3CAD;
+    border-bottom: 5px solid #04f6dd;
 }
 p2 {
     font-family: 'Montserrat', sans-serif;
