--- a/hatom.css
+++ b/hatom.css
@@ -65,6 +65,7 @@ p1 {
     box-shadow: inset 0px 0px 20px 0px black;
     border: 4px solid #04f6dd;
     transition: 0.6s;
+    z-index: 1;
 }
 
 .portfolio:hover{
