--- a/hatom.css
+++ b/hatom.css
@@ -101,6 +101,57 @@ p1 {
     transition: 0.6s;
     box-shadow: none;
 }
+.containernew{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 20px;
+    padding: 20px;
+    margin-top: 40px;
+}
+.portfolionew{
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 20px 0px black;
+    border: 4px solid #04f6dd;
+    transition: 0.6s;
+    z-index: 1;
+}
+
+.portfolionew:hover{
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    filter: brightness(100%);    
+    transition: 0.6s;
+    box-shadow: none;
+}
+.container2new{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 20px;
+}
+.portfolio2new{
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 20px 0px black;
+    border: 4px solid #04f6dd;
+    transition: 0.6s;
+}
+
+.portfolio2new:hover{
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    filter: brightness(100%);
+    transition: 0.6s;
+    box-shadow: none;
+}
 
 .hatom-name {
     background-image: url(HatomText.png);
