--- a/hatom.css
+++ b/hatom.css
@@ -132,6 +132,7 @@ p1 {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 20px;
+    border: 4px solid #5f3cad;
 }
 .portfolio2new{
     height: 200px;
@@ -141,6 +142,7 @@ p1 {
     box-shadow: inset 0px 0px 20px 0px black;
     border: 4px solid #04f6dd;
     transition: 0.6s;
+    border: 4px solid #5f3cad;
 }
 
 .portfolio2new:hover{
@@ -173,6 +175,7 @@ p1 {
     filter: drop-shadow(2px 6px 718px #5F3CAD);
     background-color: transparent;
     border-radius: 10px;
+    border-bottom: 5px solid #5f3cad;
 }
 
 .intro {
