--- a/hatom.css
+++ b/hatom.css
@@ -205,6 +205,7 @@ h1 {
     text-shadow: 0px 2px 3px black;
     font-size: 25px;
     font-variant: all-small-caps;
+    text-decoration: overline;
 }
 
 h2 {
@@ -224,6 +225,7 @@ h3 {
     text-shadow: 0px 2px 3px black;
     font-size: 25px;
     font-variant: all-small-caps;
+    text-decoration: overline;
 }
 h4 {
     font-family: 'Montserrat', sans-serif;
@@ -235,6 +237,7 @@ h4 {
     text-shadow: 0px 2px 3px black;
     font-size: 25px;
     font-variant: all-small-caps;
+    text-decoration: overline;
 }
 .web {
     background-size: cover;
