--- a/hatom.css
+++ b/hatom.css
@@ -245,6 +245,13 @@ h4 {
     background-position-y: -44px;
     border-radius: 20px;
 }
+.bnw {
+    background-size: cover;
+    background-position: center;
+    background-color: transparent;
+    background-position-y: -44px;
+    border-radius: 20px;
+}
 
 @keyframes hatom {
     from {filter: opacity(0%)};
