--- a/hatom.css
+++ b/hatom.css
@@ -250,6 +250,7 @@ h4 {
     background-position: center;
     background-color: transparent;
     border-radius: 20px;
+    z-index: 1;
 }
 
 @keyframes hatom {
