--- a/hatom.css
+++ b/hatom.css
@@ -253,6 +253,37 @@ h4 {
     z-index: 1;
     position: relative;
 }
+.containerbnw{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 20px;
+    padding: 20px;
+    margin-top: 40px;
+}
+.portfoliobnw{
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 20px 0px black;
+    border: 4px solid #04f6dd;
+    transition: 0.6s;
+    z-index: 1;
+}
+.container2bnw{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    column-gap: 20px;
+}
+.portfolio2bnw{
+    height: 200px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    box-shadow: inset 0px 0px 20px 0px black;
+    border: 4px solid #04f6dd;
+    transition: 0.6s;
+}
 
 @keyframes hatom {
     from {filter: opacity(0%)};
