--- a/hatom.css
+++ b/hatom.css
@@ -265,10 +265,10 @@ h4 {
     background-size: cover;
     background-position: center;
     border-radius: 10px;
+    filter: brightness(50%);
     box-shadow: inset 0px 0px 20px 0px black;
-    border: 4px solid #04f6dd;
+    border: 4px solid #5F3CAD;
     transition: 0.6s;
-    z-index: 1;
 }
 .container2bnw{
     display: grid;
@@ -280,10 +280,12 @@ h4 {
     background-size: cover;
     background-position: center;
     border-radius: 10px;
+    filter: brightness(50%);
     box-shadow: inset 0px 0px 20px 0px black;
-    border: 4px solid #04f6dd;
+    border: 4px solid #5F3CAD;
     transition: 0.6s;
 }
+
 
 @keyframes hatom {
     from {filter: opacity(0%)};
