--- a/hatom.css
+++ b/hatom.css
@@ -252,6 +252,7 @@ h4 {
     border-radius: 20px;
     z-index: 1;
     position: relative;
+    border: 4px solid white;
 }
 .org {
     background-size: cover;
@@ -260,6 +261,7 @@ h4 {
     border-radius: 20px;
     z-index: 1;
     position: relative;
+    border: 4px solid white;
 }
 .edt {
     background-size: cover;
@@ -268,6 +270,7 @@ h4 {
     border-radius: 20px;
     z-index: 1;
     position: relative;
+    border: 4px solid white;
 }
 .containerbnw{
     display: grid;
