--- a/hatom.css
+++ b/hatom.css
@@ -3,6 +3,10 @@
     background-color: #0C0B21;
     padding: 10px;
 }
+html{
+    scroll-behavior: smooth;
+}
+
 body::-webkit-scrollbar {
     display: none;
 
@@ -301,6 +305,33 @@ h4 {
     box-shadow: inset 0px 0px 20px 0px black;
     border: 4px solid #5F3CAD;
     transition: 0.6s;
+}
+.second {
+    text-align: center;
+}
+
+a {
+    position: relative;
+    top: 300px;
+    z-index: 10;
+    background-color: transparent;
+    text-decoration: none;
+    color: aliceblue;
+    font-size: x-large;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
+}
+
+a:hover {
+    position: relative;
+    top: 300px;
+    z-index: 10;
+    background-color: transparent;
+    text-decoration: none;
+    color: #04f6dd;
+    font-size: x-large;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
 }
 
 
