--- a/hatom.css
+++ b/hatom.css
@@ -312,26 +312,26 @@ h4 {
 
 a {
     position: relative;
-    top: 300px;
+    top: 250px;
     z-index: 10;
     background-color: transparent;
     text-decoration: none;
-    color: aliceblue;
-    font-size: x-large;
+    color: white;
+    font-size: 20px;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 a:hover {
     position: relative;
-    top: 300px;
+    top: 250px;
     z-index: 10;
     background-color: transparent;
     text-decoration: none;
     color: #04f6dd;
-    font-size: x-large;
+    font-size: 20px;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 600;
+    font-weight: 500;
 }
 
 .gas {
