--- a/hatom.css
+++ b/hatom.css
@@ -175,10 +175,12 @@ p1 {
 }
 .car {
     background-size: cover;
-    filter: drop-shadow(2px 6px 163px #5F3CAD);
+    filter: drop-shadow(2px -164px 163px #5F3CAD);
     background-color: transparent;
     border-radius: 10px;
     border-bottom: 5px solid #5f3cad;
+    z-index: 10;
+    position: relative;
 }
 
 .intro {
