--- a/hatom.css
+++ b/hatom.css
@@ -80,6 +80,7 @@ p1 {
     filter: brightness(100%);    
     transition: 0.6s;
     box-shadow: none;
+    border: 4px solid #f604e6;
 }
 .container2{
     display: grid;
@@ -104,6 +105,7 @@ p1 {
     filter: brightness(100%);
     transition: 0.6s;
     box-shadow: none;
+    border: 4px solid #f604e6;
 }
 .containernew{
     display: grid;
