--- a/hatom.css
+++ b/hatom.css
@@ -357,32 +357,32 @@ a.button {
     --offset: 50px;
     position: sticky;
     bottom: 20px;
-    margin-right: 45px;
+    margin-right: 20px;
     place-self: end;
     margin-top: calc(220vh + var(--offset));
     font-family: 'Montserrat', sans-serif;
     z-index: 100;
     background: #04f6dd4a;
     color: white;
-    border-radius: 10px;
+    border-radius: 13px;
     left: 100%;
-    font-variant: petite-caps;
+    font-size: 15px;
   }
 
 a.button:hover {
     --offset: 50px;
     position: sticky;
     bottom: 20px;
-    margin-right: 45px;
+    margin-right: 20px;
     place-self: end;
     margin-top: calc(220vh + var(--offset));
     font-family: 'Montserrat', sans-serif;
     z-index: 100;
-    background: #04f6dd;
-    color: black;
-    border-radius: 10px;
+    background: #04f6dd4a;
+    color: white;
+    border-radius: 13px;
     left: 100%;
-    font-variant: petite-caps;
+    font-size: 15px;
   }
 
 
