--- a/hatom.css
+++ b/hatom.css
@@ -367,6 +367,7 @@ a.button {
     border-radius: 13px;
     left: 100%;
     font-size: 15px;
+    filter: drop-shadow(2px 4px 2px black);
   }
 
 a.button:hover {
@@ -378,11 +379,13 @@ a.button:hover {
     margin-top: calc(220vh + var(--offset));
     font-family: 'Montserrat', sans-serif;
     z-index: 100;
-    background: #04f6dd4a;
-    color: white;
+    background: #04f6ddcf;
+    color: black;
     border-radius: 13px;
     left: 100%;
     font-size: 15px;
+    filter: drop-shadow(2px 4px 2px black);
+    transition: 0.6s;
   }
 
 
