--- a/hatom.css
+++ b/hatom.css
@@ -324,6 +324,7 @@ a.button {
     font-size: 15px;
     filter: drop-shadow(2px 4px 2px black);
     z-index: 5;
+    padding: 10px;
   }
 
 a.button:hover {
@@ -342,6 +343,7 @@ a.button:hover {
     font-size: 15px;
     filter: drop-shadow(2px 4px 2px black);
     transition: 0.6s;
+    padding: 10px;
   }
 
 .pnd {
