--- a/hatom.css
+++ b/hatom.css
@@ -191,7 +191,7 @@ p1 {
     filter: drop-shadow(102px -83px 133px #5F3CAD);
     background-color: transparent;
     border-radius: 10px;
-    border-bottom: 5px solid #04f6dd;
+    border-bottom: 5px solid #5f3cad;
 }
 p2 {
     font-family: 'Montserrat', sans-serif;
