--- a/hatom.css
+++ b/hatom.css
@@ -389,6 +389,14 @@ a.button:hover {
     padding: 10px;
 }
 
+.context {
+    background-size: cover;
+    background-position: center;
+    background-color: transparent;
+    background-position-y: -44px;
+    border-radius: 20px;
+}
+
 @keyframes move{
     0% {
       filter: hue-rotate(10deg);
