--- a/hatom.css
+++ b/hatom.css
@@ -393,8 +393,7 @@ a.button:hover {
     background-size: cover;
     background-position: center;
     background-color: transparent;
-    background-position-y: -44px;
-    border-radius: 20px;
+    filter: drop-shadow(0px 20px 103px #5F3CAD);
 }
 
 @keyframes move{
