--- a/hatom.css
+++ b/hatom.css
@@ -378,6 +378,9 @@ a.button:hover {
 }
 .web1 {
     background-size: cover;
+    width: 100%;
+    border: 2px solid white;
+    border-radius: 5px;
 }
 
 .pagebnw {
