--- a/hatom.css
+++ b/hatom.css
@@ -381,6 +381,7 @@ a.button:hover {
     width: 100%;
     border: 2px solid white;
     border-radius: 5px;
+    background-position: center;
 }
 
 .pagebnw {
